--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Wk8</string>
+    <string name="insert">Insert</string>
+    <string name="get_tasks">Get Tasks</string>
 </resources>
